# Olivine-erp-hrm

./: .gitignore  README.md  package-lock.json  package.json  python_imp_notes.txt  runservers.bat  viji.md
backend/: .env.example  Dockerfile  README.md  add_menu_items_shell.py  add_menu_items_sql.py  add_missing_employee_menu_items.py  add_missing_hrm_menu_items.py  add_mode_specific_toolbar_columns.py  add_system_tools_menu_items.py  add_system_tools_sql.py  add_table_name_method_to_hrm_admin.py  add_table_name_mixin_to_admin.py  add_table_name_to_hrm_admin.py  check_admin_file.py  check_count.py  check_depth.py  check_employee_data_v2.py  check_employee_toolbar_config.py  check_employee_toolbar_simple.py  check_erp_menu_item_fields.py  check_ess_menu_item.py  check_ess_menu_sql.py  check_ess_toolbar.py  check_hrm_employee_records.py  check_hrm_menu.py  check_levels.py  check_location_table.py  check_pagination.py  check_pagination_standalone.py  check_perms.py  check_perms_final.py  check_qa_data.py  check_toolbar_registry.py  check_toolbar_registry_ids.py  check_uom_menu.py  check_user_location_mappings.py  create_admin.py  create_hrm_menu_item.py  db.sqlite3.backup_20260109_202636  db.sqlite3.backup_20260109_203406  (+85 more)
backend/erp_core/: admin_site.py  apps.py  dataops_views.py  file_search_views.py  platform_admin.py  urls.py  visual_extractor_views.py  wsgi.py
backend/qa_console/: apps.py  models.py  serializers.py  urls.py  views.py
backend/scripts/: add_business_rules_menu.py  add_missing_menus.py  analyze_menu.py  analyze_output.txt  apply_sql_and_fake.py  (+34 more)
(+1351 files in other folders)
